# OpenDR-Framework

./: README.md
OpenDR-Framework/: Makefile  main.py  pyproject.toml  requirements.txt
OpenDR-Framework/.github/: main_ci.yml
OpenDR-Framework/data/lookup/: ethiopia_woreda_pop.json  harmonic_coefficients.csv  hazard_thresholds.json  reproducibility_checklist.md  sma_endmembers.json  stac_provider_map.yaml  urban_vulnerability_weights.csv
OpenDR-Framework/data/metadata/: catalog.json  dataset_mapping.yaml  search_logic.json  study_areas.geojson
OpenDR-Framework/data/raw/: .gitignore  README.md
OpenDR-Framework/data/sample/: bas_basin_boundary.geojson
OpenDR-Framework/deploy/docker/: docker-compose.yml
OpenDR-Framework/deploy/k8s/: dask-spec.yml
OpenDR-Framework/docs/: README.md  abstract.md  architecture.md  case-studies.md  foss4g-stack.md  installation.md
OpenDR-Framework/notebooks/: 01_case_study_japan.ipynb  01_hydrology_ethiopia.ipynb  02_wildfire_tactical_watch.ipynb  03_humanitarian_exposure.ipynb
OpenDR-Framework/scripts/: download_weights.sh  gen_ethiopia_flood_cog.py  gen_tokyo_sample.py  setup_env.sh  sync_kobo_manual.py
OpenDR-Framework/src/api/: pygeoapi_config.yml
OpenDR-Framework/src/geoai/: retrain_logic.py  train.py  training_data_gen.py
OpenDR-Framework/src/ingestion/: ingestion_service.py  stac_handler.py
OpenDR-Framework/src/microservices/: alert_dispatcher.py  citizen_feedback.py  digital_twin_tokyo.py  exposure_model.py  fire_watch.py  flood_otsu.py  (+3 more)
OpenDR-Framework/tests/: test_microservices.py  test_pipeline.py
(+17 files in other folders)
