[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opendr-framework"
version = "1.0.0"
description = "Cloud-Native GeoAI Framework for Real-Time Disaster Response"
authors = [{name = "Bayilla Geda", email = "bayillag@gmail.com"}]
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
dependencies = [
    "pystac-client",
    "dask-geo",
    "pygeoapi",
    "torch",
    "geopandas",
    "apache-airflow"
]

[tool.setuptools.packages.find]
where = ["src"]